# v_ase

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  changes.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: api.md  current_progress.md  features.md  index.md  performance.md  shortcuts.md  unit_cell_aware_rotate.md
docs/design/: constraint_guides_preview.html
examples/: basic.py  constrained.py  pro_demo.py  readme_scenes.py  relax.py
examples/readme_scene_assets/: README.md  ferrocene.traj  fixedline.traj  fixedplane.traj  hookean.traj  showcase.traj
scripts/: benchmark_large_trajectory.py  capture_readme_screenshots.py
tests/: conftest.py  manual_showcase.py  test_api.py  test_basic.py  test_blender_performance.py  test_blender_runtime.py  test_browser_rendering_modes.py  test_cad_exports.py  test_commensurate.py  test_complete_workflow_showcase.py  test_constraints.py  test_core_features.py  test_fast_lammps_viz_only.py  test_frontend_regressions.py  test_milestone_2_proof.py  test_project_consistency.py  test_readme_scene_examples.py  test_v_ase_cli.py  test_video_export.py  test_workspace_tabs.py
tests/manual_showcase_assets/: CHECKLIST.md  v_ase_manual_showcase.extxyz  v_ase_manual_showcase.traj  v_ase_manual_showcase_first_frame.vasp
v_ase/: __init__.py  _version.py  calculator.py  calculators.py  cli.py  commensurate.py  export.py  io.py  project.py  relax.py  repulsion.py  serialization.py  server.py  session.py  viewer.py  visualize.py  websocket_manager.py
v_ase/static/: api.js  index.html  main.js  renderer.js  selection.js  style.css  transform.js  workspace.css  workspace.html  workspace.js
