[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v_ase-gui"
version = "0.0.36"
description = "v_ase: a Blender-style browser GUI and editor for ASE Atoms objects."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "v_ase contributors" }
]
keywords = ["ase", "atoms", "materials-science", "visualization", "editor", "threejs"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "ase>=3.23",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "numpy>=1.24",
  "ipython>=8",
  "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/lgyEthan/v_ase"
Repository = "https://github.com/lgyEthan/v_ase"
Issues = "https://github.com/lgyEthan/v_ase/issues"

[project.scripts]
v_ase = "v_ase.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "playwright>=1.40",
  "build>=1.2",
  "twine>=5",
]
jupyter = [
  "notebook>=7",
  "jupyterlab>=4",
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["v_ase*"]

[tool.setuptools.package-data]
v_ase = ["static/*.html", "static/*.css", "static/*.js", "static/vendor/*.js", "static/vendor/THREE_LICENSE"]
